WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158013
[Font Loading] Crash during font download failure after garbage collection
https://bugs.webkit.org/show_bug.cgi?id=158013
Summary
[Font Loading] Crash during font download failure after garbage collection
Myles C. Maxfield
Reported
2016-05-23 22:29:27 PDT
[Font Loading] Crash during font download failure after garbage collection
Attachments
Patch
(4.00 KB, patch)
2016-05-23 22:33 PDT
,
Myles C. Maxfield
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-05-23 22:33:42 PDT
Created
attachment 279626
[details]
Patch
Myles C. Maxfield
Comment 2
2016-05-23 22:34:40 PDT
Comment on
attachment 279626
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=279626&action=review
> Source/WebCore/ChangeLog:4 > +
https://bugs.webkit.org/show_bug.cgi?id=158013
Needs a radar.
Myles C. Maxfield
Comment 3
2016-05-24 15:03:00 PDT
Committed
r201358
: <
http://trac.webkit.org/changeset/201358
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug